# WoSt

./: .gitignore  CMakeLists.txt  PRESENTATION.md  README.md  WoSt.py  build_cpp.ps1  generate_presentation_data.py  generate_real_presentation_assets.ps1  live_demo.py  main.cpp  poster.tex  presentation_viz.py  run.sh  run_python.ps1  setup_env.ps1  test1_manufactured_pointcloud.vtk  test1_manufactured_slice_xy.vtk
configs/: bunny_final.yaml  bunny_mixed_neumann.yaml  bunny_quick.yaml  bunny_smoke.yaml  sphere_final.yaml  sphere_quick.yaml  sphere_smoke.yaml  spot_final.yaml  spot_quick.yaml  spot_smoke.yaml
docs/: BENCHMARK_STATUS.md  BUNNY_BENCHMARK_REPORT.md  BUNNY_BENCHMARK_WORKFLOW.md  BUNNY_RESULTS_SUMMARY.md  CODE_LOGIC_AND_MODES.md  EXPERIMENT_PIPELINE_AUDIT.md  NEUMANN_BENCHMARK_REPORT.md  REPOSITORY_ORGANIZATION.md  RESULTS_COMMAND_MAPPING.md  SESSION_COMMAND_LOG.md  report_results_command_sources_2026_06.md  session_command_log_2026_06.md
experiments/: adaptive_relative_points.vtk  final_integrated_report.md  lazy_refinement_points.vtk  optimization_points.csv  optimization_summary.csv
experiments/bunny_smoke/: config_used.yaml
experiments/bunny_smoke/raw/: dirichlet_accuracy.csv  geometry_benchmark.csv  mixed_neumann.csv  variance_adaptive_points.csv
experiments/bunny_smoke/tables/: variance_adaptive_max_sample_warning.csv  variance_adaptive_summary_stats.csv
experiments/controlled_geometry_experiments_20260606/: CONTROLLED_GEOMETRY_REPORT.md  POSTER_READY_SUMMARY.md  command_log.txt  controlled_geometry_config.json  controlled_geometry_correlations.csv  distance_controlled_bias.csv  distance_controlled_bias_summary.csv  distance_controlled_neumann.csv  distance_controlled_query_counts.csv  epsilon_distance_sensitivity_ratios.csv  epsilon_distance_sweep.csv  epsilon_distance_sweep_walks256.csv  matched_bin_summary.csv
experiments/controlled_geometry_experiments_20260606/point_lists/: spot_original_distance_controlled_points.csv
experiments/controlled_geometry_experiments_20260606/raw/: bunny_original_bias_eps_1e-02_walks_1024.csv  (+43 more)
experiments/controlled_geometry_part1_20260606/: CONTROLLED_GEOMETRY_REPORT.md  command_log.txt  controlled_geometry_config.json  distance_controlled_neumann_summary.csv  epsilon_distance_sweep.csv  geometry_regression_coefficients.csv  geometry_regression_summary.md  matched_bin_comparison.csv  matched_bin_summary.csv
experiments/controlled_geometry_smoke_20260606/: CONTROLLED_GEOMETRY_REPORT.md  command_log.txt  controlled_geometry_config.json  controlled_geometry_correlations.csv  distance_controlled_bias.csv  distance_controlled_bias_summary.csv  distance_controlled_neumann.csv  distance_controlled_neumann_summary.csv  distance_controlled_query_counts.csv  epsilon_distance_sweep.csv  geometry_regression_coefficients.csv  geometry_regression_summary.md
experiments/formal_zombie_dirichlet/: geometry_benchmark.csv  linear_dirichlet_grid.vtk
experiments/formal_zombie_neumann/: ZOMBIE_VS_WOST_NEUMANN_COMPARISON.md  neumann_mixed_grid.vtk  zombie_vs_wost_neumann_summary.csv
experiments/geometry_sensitive_analysis_20260606/: GEOMETRY_SENSITIVE_REPORT.md  benchmark_sensitivity_summary.csv  boundary_bias_summary_combined.csv  command_log.txt  geometry_binned_summaries.csv  geometry_correlations.csv  mesh_feature_comparison.csv
experiments/rerun_cross_mesh_20260606/: RERUN_SUMMARY.md  command_log.txt
experiments/spot_dirichlet_100k_20260609/: README.md  command.txt  run_stdout.txt
experiments_obsolete/: adaptive_relative_points.vtk  final_integrated_report.md  formal_comparison_report.md  lazy_refinement_points.vtk  optimization_points.csv  optimization_report.md  optimization_summary.csv
experiments_obsolete/bunny_smoke/: config_resolved.json  epsilon_sweep_classification.csv
experiments_obsolete/final_cross_mesh_report_20260603/: final_cross_mesh_report.md
experiments_obsolete/formal_zombie_dirichlet/: README.md  benchmark_summary.csv  linear_dirichlet_pointcloud.vtk  zombie_vs_wost_summary.csv
experiments_obsolete/formal_zombie_neumann/: benchmark_summary.csv  neumann_mixed_pointcloud.vtk
experiments_obsolete/spot_mesh_report_20260603/: cross_mesh_consistency_analysis.md  spot_experiment_report.md
reports/: FINAL_COURSE_REPORT.md  LIVE_DEMO_INSTRUCTIONS.md  POSTER_RESULTS_SECTION.md  final_report_provenance.md  final_report_quality_checks.txt
reports/final_assets/: controlled_matched_bin_ratios.csv  controlled_matched_bin_statistics.csv  optimization_diagnostic_summary.csv
results/: benchmark_summary.csv  boundary_bias_detector.vtk  boundary_bias_detector_3d.html  boundary_bias_summary.csv  geometry_benchmark.csv  linear_dirichlet_pointcloud.vtk  live_demo_summary.csv  live_trace.csv  live_trace_interactive_3d.html  neumann_mixed_grid.vtk  neumann_mixed_pointcloud.vtk
results/vtk_value_views/: experiments__rerun_cross_mesh_20260606__wost_bunny__results__linear_dirichlet_grid.html  experiments__rerun_cross_mesh_20260606__wost_bunny__results__linear_dirichlet_pointcloud.html
results_obsolete/: adaptive_sampling_grid.vtk  benchmark_summary.csv  live_demo_summary.csv  live_trace.csv  neumann_mixed_grid.vtk  neumann_mixed_pointcloud.vtk  variance_adaptive_comparison.csv
results_obsolete/formal_innovation_demo_20260603/: variance_adaptive_points.csv
results_saved/: geometry_benchmark.csv  linear_dirichlet_grid.vtk
scripts/: analyze_geometry_sensitive_rerun.py  cleanup_repository.ps1  plot_benchmarks.py  plot_boundary_bias.py  plot_full_experiment_suite.py  plot_live_trace.py  plot_optimization_experiments.py  plot_variance_adaptive.py  plot_vtk_values.py  run_all_wost_experiments.py  run_controlled_geometry_experiments.py  run_cross_mesh_rerun_20260606.ps1  run_live_demo.py  run_optimization_experiments.ps1  summarize_controlled_geometry_results.py  wost_geometry_analysis.py
scripts/final_report/: build_final_course_report.py
src/: CubeOuterBoundary.cpp  CubeOuterBoundary.hpp  WoStGeometryBackend.cpp  WoStGeometryBackend.hpp  WoStKernel.cpp  WoStKernel.hpp  tiny_bvh.h  utils.hpp
(+115 files in other folders)
